Still testing to fix the underline issues on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -331,7 +331,7 @@ nav {
     animation: designUnderline 2s;
     content: '';
     position: absolute;
-    bottom: -2px;
+    bottom: 0;
     height: 10px;
     border-bottom: 2px solid #00E7FF;
 }
@@ -351,7 +351,7 @@ nav {
     animation: buildUnderline 2s;
     content: '';
     position: absolute;
-    bottom: -2px;
+    bottom: 0;
     height: 10px;
     border-bottom: 2px solid #00E7FF;
 }
@@ -380,7 +380,7 @@ nav {
     animation: inspireUnderline 2s;
     content: '';
     position: absolute;
-    bottom: -2px;
+    bottom: 0;
     height: 10px;
     border-bottom: 2px solid #00E7FF;
 }
